# tp3-chocolat-app

./: .gitignore  README.md  app_streamlit.py  create_sample_data.py  pyproject.toml  requirements.txt  test_chatbot.py  test_load.py
.streamlit/: config.toml
data/processed/: sample_data.parquet
utils/: charts.py  chatbot.py  data.py
